# odoo-mcp-server-remote

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
odoo_mcp_remote/: __init__.py  __main__.py  auth.py  odoo_client.py  server.py
